# actix-htmx

./: Cargo.toml  Justfile  LICENSE  README.md
docs/: .rustc_info.json  .rustdoc_fingerprint.json  crates.js  fn.main.html
docs/actors/: index.html
docs/actors/actor/: sidebar-items.js  struct.ChatSocket.html
docs/configs/: index.html
docs/configs/config/: index.html
docs/debug/.fingerprint/actix-a3610a419098152e/: lib-actix  lib-actix.json
docs/debug/.fingerprint/actix-codec-79aae33f5fc2c029/: lib-actix_codec  lib-actix_codec.json
docs/debug/.fingerprint/actix-htmx-92b49d60215bcf7f/: doc-bin-actix-htmx  doc-bin-actix-htmx.json
docs/debug/.fingerprint/actix-http-b1a8cd191d8a8f5f/: lib-actix_http  lib-actix_http.json
docs/debug/.fingerprint/actix-macros-73474b25cffbaee7/: lib-actix-macros  lib-actix-macros.json
docs/doc/: help.html  search-index.js  settings.html  src-files.js
docs/doc/actix_htmx/: all.html  index.html  sidebar-items.js
docs/handlers/handler/: struct.about.html  struct.cookie.html  struct.events.html  struct.get_content.html  struct.get_leaderboard.html  struct.login.html  struct.ws_index.html
docs/models/: index.html
docs/models/model/: sidebar-items.js  struct.LoginRequest.html  struct.MySanityConfig.html  struct.Slug.html
docs/src/actix_htmx/: main.rs.html
src/: main.rs
src/actors/: actor.rs
src/configs/: config.rs
src/handlers/: handler.rs
src/models/: model.rs
templates/: about.html  comp-user.html  comp.html  home.html  index.html
templates/components/: draganddrop.html  footer.html  navigation.html
(+862 files in other folders)
